5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4150/executions/1758_1189.log
== TEST (2019-05-30 00:26:41) 
-- CODE:
from numpy import*
s = input("digite uma string: ")
new = s.replace (" ", "")
inv = ""
i = -1 
while(i >= -len(new)):
	inv = inv + new[i]
	i = i -1v
print(new.upper())
if (inv == new):
	print(1)
else:
	print(0)
-- ERROR:
File "XXXX", line 8
    i = i -1v
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 00:26:50) 
-- CODE:
from numpy import*
s = input("digite uma string: ")
new = s.replace (" ", "")
inv = ""
i = -1 
while(i >= -len(new)):
	inv = inv + new[i]
	i = i -1
print(new.upper())
if (inv == new):
	print(1)
else:
	print(0)
-- EXECUTION TIME:
0.447521
-- TEST CASE 1:
---- input:
ACARARAJADADAJARARACA
---- correct output:
ACARARAJADADAJARARACA
1
---- user output:
ACARARAJADADAJARARACA
1
-- TEST CASE 2:
---- input:
CACHORRO
---- correct output:
CACHORRO
0
---- user output:
CACHORRO
0
-- TEST CASE 3:
---- input:
amalanadanalama
---- correct output:
AMALANADANALAMA
1
---- user output:
AMALANADANALAMA
1
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
